# learn_gtk

./: README.md
gtk2/1/: 1.c
gtk2/2/: 2.c  helloworld_improve.c
gtk2/helloworld/: hello-world-gtk  hello-world-gtk.c
gtk4/1/: CMakeLists.txt  c_cpp_properties.json
gtk4/hello/: CMakeLists.txt  example-1.c
gtk4/saolei/: CMakeLIsts.txt  main.c  remake.ps1
gtk4/time/: example-1.c
